# sap-lang

./: .gitignore  Cargo.toml  README.md  implementation_js.md  js_calling_conv.js  languages.md  manifest.sap  packages.md  parser.pest  test.js  typecheck.md
examples/: array.sap  coeffect.sap  cont.sap  effects.sap  fib.sap  hello.sap  if.sap  object.sap  operator_overloading.sap  pattern_match_assign.sap  pattern_matching.sap  slice.sap  string_format.sap
js_prelude/: collection.js  match.js  ops.js  prelude.js  string.js
src/: ast.rs  error_diag.rs  error_reporting.rs  main.rs  pattern_tree.rs  simple_literal.rs  simple_pattern.rs
src/backend/: literal.rs  mod.rs  module.rs  pattern.rs  prelude.js
src/backend/js/: js_prelude.js  mod.rs
src/backend/prelude/: array.js  match.js  ops.js  string.js
src/parser/: expr.rs  infix.rs  mod.rs  postfix.rs  prefix.rs
src/parser/literal/: array.rs  mod.rs  number.rs  object.rs  string.rs
src/parser/pattern/: array.rs  mod.rs  object.rs
src/parser/primary/: id.rs  lambda_expr.rs  mod.rs
src/passes/: flatten.rs  flatten_and_ops_to_apply.rs  mod.rs  trivialize_pattern.rs
stage1/: compile_js.sap
stage1/compiler/: compile_inner.sap  literal_compiler.sap  pattern_assigner.sap  pattern_id_finder.sap  pattern_id_replacer.sap
stage1/parser/: parser.sap
test_module/: a.sap  test_module.sap
test_module/b/: b.sap  c.sap
test_module/b/d/: d.sap  e.sap
