[package]
name = "implementation"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = { version = "2" }
pest_derive = { version = "2" , features = ["grammar-extras"] }

# error
thiserror = { version = "2" }

# value type
num-bigint = "0.4"
regex = "1.11"

# diagnostics
ariadne = { version = "0.5.0", features = ["auto-color"] }
