[package]
name = "sap-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
# sap-parser = { git="https://github.com/sap-lang/sap-parser", rev = "1f8574fa5e1c3bf6cea5c2615fac306d5c5e1718"}
sap-parser = { path = "../sap-parser" }

# error reporting
ariadne = { version = "0.5.0", features = ["auto-color"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# utils
uuid = { version = "1.12.1", features = ["v7"] }